<?xml version="1.0"?>
<package format="2">
  <name>tensorrt_base</name>
  <version>0.0.0</version>
  <description>The tensorrt_base package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="daniel@todo.com">Daniel</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
